# simply-simplify-language

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AZURE_HOWTO.md  LICENSE  README.md  _gh.code-workspace  config.yaml  config_openai.yaml  env.example.txt  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  requirements.txt
_aoai/: README.md
_streamlit_app/: .env_example  __init__.py  app_core.py  sprache-vereinfachen-openai.py  sprache-vereinfachen.py  sprache-vereinfachen_azure.py  sprache-vereinfachen_google.py  sprache-vereinfachen_openai.py  utils_expander.md  utils_expander_google.md  utils_expander_openai.md  utils_prompts.py  utils_sample_texts.py  utils_understandability.py
_streamlit_app/data/: cefr_vocab.parq  gaussian_mixture_model.pkl  ridge_regressor.pkl  standard_scaler.pkl  word_scores_final_0728.parq
promptflow/: README.md  openai_connection.yaml  run_all_tests.sh  test_data.jsonl
promptflow/eval-simplify/: aggregate.py  calculate_readability.py  calculate_score.py  cefr_level.py  estimate_cost.py  flow.dag.yaml  requirements.txt  word_scores.parq
promptflow/eval-simplify-es/: aggregate.py  calculate_score.py  cefr_level.py  flow.dag.yaml  line_process.py
promptflow/eval-simplify-es/.promptflow/: flow.tools.json
promptflow/eval-simplify/.promptflow/: flow.tools.json
promptflow/flow-simplify-es/: completeness_condensed.jinja2  completeness_full.jinja2  create_prompt.jinja2  data.jsonl  flow.dag.yaml  rules_es.jinja2  rules_es_short.jinja2  simplify_es.jinja2
promptflow/flow-simplify-es/.promptflow/: flow-completeness-condensed.detail.json  flow-completeness-full.detail.json  flow-rules_es-short_instructions.detail.json  flow-rules_es-short_instructions.output.json  flow-simplify_es-gpt35turbo.detail.json  flow-simplify_es-gpt35turbo.output.json  flow-simplify_es-gpt4o.detail.json  flow-simplify_es-gpt4o.output.json  flow.detail.json  flow.layout.json  flow.output.json  flow.tools.json  flow.uihint.json  ux.inputs.json
promptflow/notebooks/: evaluate_flows.ipynb  helpers.py
tests/: test_app_core.py
