[project]
name = "simply-simplify-language"
version = "1.1.0"
description = "Use LLMs to simplify your institutional communication."
authors = [
  { name = "Statistisches Amt Kanton Zürich, Team Data", email = "datashop@statistik.zh.ch" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "zix @ git+https://github.com/machinelearningZH/zix_understandability-index",
    "de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl",
    "openai>=2.9.0",
    "pyarrow>=22.0.0",
    "streamlit>=1.52.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[tool.ruff]
ignore = ["E402"]
